--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   firebase_auth: ^4.3.0
   google_sign_in: ^6.0.2
   cloud_firestore: ^4.4.5
+  firebase_database: ^10.0.16
+  universal_html: ^2.2.1
+  flutter_widget_from_html: ^0.9.1
 
 dev_dependencies:
   flutter_test:
