--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_database: ^10.0.16
   universal_html: ^2.2.1
   flutter_widget_from_html: ^0.9.1
+  webviewx: ^0.2.2
 
 dev_dependencies:
   flutter_test:
