--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,12 @@ dependencies:
   universal_html: ^2.2.1
   flutter_widget_from_html: ^0.9.1
   webviewx: ^0.2.2
+  carousel_slider: ^4.2.1
+  firebase_storage: ^11.1.0
+  image_network: ^2.5.1
+  responsive_builder: ^0.6.4
+  flutter_rating_bar: ^4.0.1
+  google_maps_flutter_web: ^0.4.0+7
 
 dev_dependencies:
   flutter_test:
