--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,9 @@ dependencies:
   responsive_builder: ^0.6.4
   flutter_rating_bar: ^4.0.1
   google_maps_flutter_web: ^0.4.0+7
+  mercado_pago_integration: ^1.1.9
+  dartz: ^0.9.2
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
