--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,11 @@ dependencies:
   mercado_pago_integration: ^1.1.9
   dartz: ^0.9.2
   http: ^0.13.5
+  flutter_localizations:
+    sdk: flutter
+  map: ^1.4.1
+  google_maps_flutter: ^2.2.6
+  google_maps: ^6.2.0
 
 dev_dependencies:
   flutter_test:
