--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,8 @@ dependencies:
   google_maps_flutter: ^2.2.6
   google_maps: ^6.2.0
   geocode: ^1.0.2
+  flutter_dropzone: ^3.0.5
+  file_picker: ^4.6.1
 
 dev_dependencies:
   flutter_test:
