--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -77,6 +77,7 @@ dependencies:
   geocode: ^1.0.2
   flutter_dropzone: ^3.0.5
   file_picker: ^4.6.1
+  art_sweetalert: ^0.0.5
 
 dev_dependencies:
   flutter_test:
